# Laboratoare-Structuri-de-Date-si-Algoritmi

L1Root/: App.cpp  ShortTest.cpp  SortedSet.cpp  SortedSet.h
L1Root/L1_CristiRusu/: Laborator1SDA (1).rar  Laborator1SDA.rar  Laborator1SDA.sln
L1Root/L1_Mihai/: App.cpp  CMakeLists.txt  ExtendedTest.cpp  Map.cpp  Map.h  MapIterator.cpp  ShortTest.cpp
L1Root/L1_Mihai/proiect/: mishu.rar
L1Root/L1_Mihai/proiect/hawmiaw/: hawmiaw.cbp  main.cpp
L1Root/L1_Mihai/proiect/mihai/: ExtendedTest.cpp  Map.cpp  Map.h  MapIterator.cpp  MapIterator.h  ShortTest.cpp  main.cpp  mihai.cbp  mihai.depend  mihai.layout
L1Root/L1_tema_acasa2/: SortedSet_sa_fiu_eu_safe.rar
L1Root/L1_tema_acasa2 - Copy/: Sorted_Set_Muntean_Ioan.rar
L1Root/luate in romana de la info-romana/: Matrice.txt  test.txt
L2Root/App_queue/: App_queue.sln
L2Root/arhiva queue/: Queue.cpp
L2Root/l2Andrei/: App.cpp  ExtendedTest.cpp  SMIterator.cpp  SMIterator.h  ShortTest.cpp  SortedMap.cpp  SortedMap.h  l2Andrei.sln  l2Andrei.vcxproj
L2Root/l2Mihai2/: App.cpp  ExtendedTest.cpp  ListIterator.cpp  ListIterator.h  SortedIndexedList.cpp  SortedIndexedList.h  l2Mihai.sln  l2Mihai.vcxproj
L2Root/l2Mihai3/: App.cpp  ExtendedTest.cpp  ListIterator.cpp  ListIterator.h  ShortTest.cpp  SortedIndexedList.cpp  SortedIndexedList.h  l2.sln  l2.vcxproj
L2Root/l2_incercat_sim/: Queue.cpp  Queue.h  Stack.cpp  Stack.h  l2sim.sln  l2sim.vcxproj  (+2 more)
L4Root/: QueryResults.csv  vorlseung4_teil2_moodle_tradus.txt
L5Root/: l5_14(final).rar
L6Root/: de_trimis_bun.rar  de_trimis_nu-i_bun 2.jfif  de_trimis_nu-i_bun.jfif
(+842 files in other folders)
